# alittlerusty

./: .gitignore  hexcalc.rs  new_cargo.bat  numconv.rs  syncdrives.rs
loghours/: Cargo.toml
loghours/src/: error.rs  loopstate.rs  main.rs  state.rs  util.rs
loghours/src/db/: config.rs  conn.rs  entries.rs  mod.rs  schema.rs
names/: Cargo.toml  names.txt
names/src/: main.rs
numconv/: Cargo.toml
numconv/src/: main.rs
src/: main.rs
syncdrives/: Cargo.toml
syncdrives/src/: config.rs  gdrive.rs  main.rs  util.rs
test/: Cargo.toml
tokiotests/: Cargo.toml
tokiotests/src/: main.rs
