[package]
name = "loghours"
version = "0.1.0"
authors = ["Ryan Kooy <rwkooy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
termion = "*"
tokio = { version = "1", features = ["full"] }
