[package]
name = "loghours"
version = "0.1.0"
authors = ["Ryan Kooy <rwkooy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled", "hooks"] }
termion = "*"
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
